<resources>
    <string name="app_name">KYC_Android</string>
    <string name="welcome_1">Kolay ve hızlı bir şekilde \n hesabınızı oluşturabilirsiniz.</string>
    <string name="welcome_2">Önce telefonunuzun arka kamerasından \n kimliğinizin önünü ve arkasını taratın.</string>
    <string name="welcome_3">Sonra telefonunuzun \n ön kamerasından yüzünüzü taratın.</string>
    <string name="welcome_4">En son imzanızı ekrana çizerek \n kayıt işlemini tamamlayın.</string>
    <string name="welcome_back_button_text">Geri</string>
    <string name="welcome_next_button_text">Devam</string>
    <string name="welcome_start_button_text">Başla</string>

    <string name="identityCameraInfoFrontText">Telefonunuzu dik tutup kimliğinizin ön tarafını \n ekrandaki gibi alana yerleştirin.</string>
    <string name="identityCameraInfoBackText">Telefonunuzu dik tutup kimliğinizin arka tarafını \n ekrandaki gibi alana yerleştirin.</string>
    <string name="identityCameraInfoSelfieText">Yüz taraması için yüzünüzü net gözükecek şekilde \n ekrandaki alana yaklaştırın</string>
    <string name="identityCameraInfoFrontOK">Tamam</string>
    <string name="speechRecognitionText">KYC beni sesimden tanır.</string>
    <string name="speechRecognitionPromptText">"Lütfen aşağıdaki yazıyı okuyunuz."</string>

    <!-- Identity Signiture -->
    <string name="identitySignitureRetryButton">Tekrar</string>
    <string name="identitySignitureContinueButton">Devam</string>
    <string name="identitySignitureSpinnerText">Bilgileriniz işleniyor...</string>

    <!--Identity Signiture Dialog-->
    <string name="identitySignitureAlertTitle">İmza Onay</string>
    <string name="identitySignitureAlertText">Telefonunuzu yan çeviriniz ve kimliğinizde \n bulunan imzanın aynısını ekrana çiziniz.</string>
    <string name="identitySignitureAlertPositiveButton">Tamam</string>

    <!--Identity Results-->
    <string name="identityResultOKButton">Tamam</string>
    <string name="identityResultBackButton">Geri</string>
    <string name="identityResultTitleText">Kayıt Bilgileri</string>
    <string name="identityResultMatchingText">eşleşme</string>
    <string name="identityResultName">ADI</string>
    <string name="identityResultSurname">SOYADI</string>
    <string name="identityResultBirthdate">DOĞUM TARİHİ</string>
    <string name="identityResultTCKN">KİMLİK NUMARASI</string>

    <!-- Identity Result Alert Dialog-->
    <string name="identityResultBackWarningTitle">rly?</string>
    <string name="identityResultBackWarningMessage">Emin Misiniz?</string>
    <string name="identityResultBackWarningPositiveButton">Evet</string>
    <string name="identityResultBackWarningNegativeButton">Hayır</string>

</resources>
